{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 482,
  "lineage": "b419d5c3-d89f-7795-30f7-66f499f59733",
  "resources": [
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:430572752916:security-group/sg-0e6e228fa5a51f7cc",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6e228fa5a51f7cc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09853ee6cdb39a4af"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "tarantool-test2022011921461030900000000a",
            "name_prefix": "tarantool-test",
            "owner_id": "430572752916",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tarantool-test-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "tarantool-test-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0029f57f9c27b935d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:430572752916:security-group/sg-09853ee6cdb39a4af",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09853ee6cdb39a4af",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e6e228fa5a51f7cc"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e6e228fa5a51f7cc"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "tarantool-test20220119214610307900000009",
            "name_prefix": "tarantool-test",
            "owner_id": "430572752916",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tarantool-test-eks_worker_sg",
              "kubernetes.io/cluster/tarantool-test": "owned"
            },
            "tags_all": {
              "Name": "tarantool-test-eks_worker_sg",
              "kubernetes.io/cluster/tarantool-test": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0029f57f9c27b935d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-4173973405",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e6e228fa5a51f7cc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-2185534409",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e6e228fa5a51f7cc",
            "self": false,
            "source_security_group_id": "sg-09853ee6cdb39a4af",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.workers",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-528892655",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09853ee6cdb39a4af",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.workers",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3731857849",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09853ee6cdb39a4af",
            "self": false,
            "source_security_group_id": "sg-0e6e228fa5a51f7cc",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.workers",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.eks.aws_security_group.cluster"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-3069974326",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09853ee6cdb39a4af",
            "self": false,
            "source_security_group_id": "sg-0e6e228fa5a51f7cc",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.workers",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2200394288",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09853ee6cdb39a4af",
            "self": false,
            "source_security_group_id": "sg-09853ee6cdb39a4af",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.workers",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.vpc[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a505da4fbdbe3c3",
            "association_id": "eipassoc-0cb45f89fdc7dc2cb",
            "domain": "vpc",
            "id": "eipalloc-08a505da4fbdbe3c3",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0142a3032b8868bb7",
            "private_dns": "ip-10-0-4-126.eu-west-1.compute.internal",
            "private_ip": "10.0.4.126",
            "public_dns": "ec2-54-228-168-154.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.228.168.154",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tarantool-test-vpc-eu-west-1a"
            },
            "tags_all": {
              "Name": "tarantool-test-vpc-eu-west-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc[0]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:430572752916:internet-gateway/igw-0d380b31d4bf4132d",
            "id": "igw-0d380b31d4bf4132d",
            "owner_id": "430572752916",
            "tags": {
              "Name": "tarantool-test-vpc"
            },
            "tags_all": {
              "Name": "tarantool-test-vpc"
            },
            "vpc_id": "vpc-0029f57f9c27b935d"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc[0]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a505da4fbdbe3c3",
            "connectivity_type": "public",
            "id": "nat-0ab9473da82ba1df9",
            "network_interface_id": "eni-0142a3032b8868bb7",
            "private_ip": "10.0.4.126",
            "public_ip": "54.228.168.154",
            "subnet_id": "subnet-05b10e1b8ad329259",
            "tags": {
              "Name": "tarantool-test-vpc-eu-west-1a"
            },
            "tags_all": {
              "Name": "tarantool-test-vpc-eu-west-1a"
            }
          },
          "dependencies": [
            "module.eks.data.aws_availability_zones.available",
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c4c0703f5727bdb91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ab9473da82ba1df9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c4c0703f5727bdb9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks.data.aws_availability_zones.available",
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_nat_gateway.this",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d380b31d4bf4132d",
            "id": "r-rtb-08f77e993f09111b01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08f77e993f09111b0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:430572752916:route-table/rtb-0c4c0703f5727bdb9",
            "id": "rtb-0c4c0703f5727bdb9",
            "owner_id": "430572752916",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ab9473da82ba1df9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tarantool-test-vpc-private"
            },
            "tags_all": {
              "Name": "tarantool-test-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0029f57f9c27b935d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks.data.aws_availability_zones.available",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:430572752916:route-table/rtb-08f77e993f09111b0",
            "id": "rtb-08f77e993f09111b0",
            "owner_id": "430572752916",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d380b31d4bf4132d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tarantool-test-vpc-public"
            },
            "tags_all": {
              "Name": "tarantool-test-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0029f57f9c27b935d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ec5bb4a5279dc08",
            "route_table_id": "rtb-0c4c0703f5727bdb9",
            "subnet_id": "subnet-0d6462fc23c5e60c8"
          },
          "dependencies": [
            "module.eks.data.aws_availability_zones.available",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc16c1c5d9aa98fe",
            "route_table_id": "rtb-0c4c0703f5727bdb9",
            "subnet_id": "subnet-04b1581ce5488a067"
          },
          "dependencies": [
            "module.eks.data.aws_availability_zones.available",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016fd0271b3c72e67",
            "route_table_id": "rtb-0c4c0703f5727bdb9",
            "subnet_id": "subnet-0e291a0f6a117a0db"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks.data.aws_availability_zones.available",
            "module.eks.module.vpc.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0ebb1960873a16b",
            "route_table_id": "rtb-08f77e993f09111b0",
            "subnet_id": "subnet-05b10e1b8ad329259"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks.data.aws_availability_zones.available",
            "module.eks.module.vpc.aws_route_table.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00694d112b9c4e857",
            "route_table_id": "rtb-08f77e993f09111b0",
            "subnet_id": "subnet-031bc5808f4dca72b"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks.data.aws_availability_zones.available",
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e54f04237575713e",
            "route_table_id": "rtb-08f77e993f09111b0",
            "subnet_id": "subnet-0daac90ea91ee70bd"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks.data.aws_availability_zones.available",
            "module.eks.module.vpc.aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:430572752916:subnet/subnet-0d6462fc23c5e60c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6462fc23c5e60c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "430572752916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tarantool-test-vpc-private-eu-west-1a",
              "kubernetes.io/cluster/tarantool-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "tarantool-test-vpc-private-eu-west-1a",
              "kubernetes.io/cluster/tarantool-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0029f57f9c27b935d"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks.data.aws_availability_zones.available",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:430572752916:subnet/subnet-04b1581ce5488a067",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b1581ce5488a067",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "430572752916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tarantool-test-vpc-private-eu-west-1b",
              "kubernetes.io/cluster/tarantool-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "tarantool-test-vpc-private-eu-west-1b",
              "kubernetes.io/cluster/tarantool-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0029f57f9c27b935d"
          },
          "dependencies": [
            "module.eks.data.aws_availability_zones.available",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:430572752916:subnet/subnet-0e291a0f6a117a0db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e291a0f6a117a0db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "430572752916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tarantool-test-vpc-private-eu-west-1c",
              "kubernetes.io/cluster/tarantool-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "tarantool-test-vpc-private-eu-west-1c",
              "kubernetes.io/cluster/tarantool-test": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0029f57f9c27b935d"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks.data.aws_availability_zones.available",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.vpc[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:430572752916:subnet/subnet-05b10e1b8ad329259",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b10e1b8ad329259",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "430572752916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tarantool-test-vpc-public-eu-west-1a",
              "kubernetes.io/cluster/tarantool-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "tarantool-test-vpc-public-eu-west-1a",
              "kubernetes.io/cluster/tarantool-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0029f57f9c27b935d"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.eks.data.aws_availability_zones.available",
            "module.eks.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:430572752916:subnet/subnet-031bc5808f4dca72b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031bc5808f4dca72b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "430572752916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tarantool-test-vpc-public-eu-west-1b",
              "kubernetes.io/cluster/tarantool-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "tarantool-test-vpc-public-eu-west-1b",
              "kubernetes.io/cluster/tarantool-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0029f57f9c27b935d"
          },
          "dependencies": [
            "module.eks.data.aws_availability_zones.available",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:430572752916:subnet/subnet-0daac90ea91ee70bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0daac90ea91ee70bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "430572752916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tarantool-test-vpc-public-eu-west-1c",
              "kubernetes.io/cluster/tarantool-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "tarantool-test-vpc-public-eu-west-1c",
              "kubernetes.io/cluster/tarantool-test": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0029f57f9c27b935d"
          },
          "dependencies": [
            "module.eks.data.aws_availability_zones.available",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc[0]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:430572752916:vpc/vpc-0029f57f9c27b935d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b91b86e70862b3af",
            "default_route_table_id": "rtb-0e9a8163341ab6615",
            "default_security_group_id": "sg-0412d4a32e261da41",
            "dhcp_options_id": "dopt-0a665e64627796977",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0029f57f9c27b935d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e9a8163341ab6615",
            "owner_id": "430572752916",
            "tags": {
              "Name": "tarantool-test-vpc"
            },
            "tags_all": {
              "Name": "tarantool-test-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}